<resources>
    <string name="app_name">Login_Register</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="user_name">User Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="Register">Register</string>
    <string name="don_t_have_account">Don\'t have account</string>
    <string name="click_here">Click Here</string>
    <string name="already_have_account">Already have account</string>
    <string name="button">Button</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
    <string name="start_app">Start App</string>
    <string name="log_in">Log In</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="Continue">Continue</string>
</resources>