<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/register"
    android:orientation="vertical"
    tools:context=".Registration">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045">


        <EditText
            android:id="@+id/fname"
            android:layout_width="300sp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:hint="@string/first_name"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="#607D8B"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TextFields" />

        <EditText
            android:id="@+id/lname"
            android:layout_width="300sp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:hint="@string/last_name"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="#607D8B"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fname"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TextFields" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300sp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColorHint="#78909C"
            app:layout_constraintBottom_toTopOf="@+id/pwd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lname"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="41dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="#607D8B"
            app:layout_constraintBottom_toTopOf="@+id/register1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/register1"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="300sp"
            android:layout_height="40dp"
            android:layout_marginBottom="180dp"
            android:background="@drawable/custom_input"
            android:text="@string/Register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwd"
            tools:ignore="ButtonStyle,UnusedAttribute,TouchTargetSizeCheck,TextContrastCheck" />

        <Button
            android:id="@+id/facebook"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="145sp"
            android:layout_height="40dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="151dp"
            android:background="@drawable/custom_input"
            android:drawableLeft="@drawable/icons8_facebook"
            android:text="@string/facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/google"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register1"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="RtlHardcoded,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/google"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="145sp"
            android:layout_height="40dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/custom_input"
            android:drawableLeft="@drawable/icons8_google"
            android:text="@string/google"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/facebook"
            app:layout_constraintTop_toBottomOf="@+id/fname"
            app:layout_constraintVertical_bias="0.664"
            tools:ignore="RtlHardcoded,TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

