<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/register"
    android:orientation="vertical"
    tools:context=".Login">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColorHint="#607D8B"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/pwd"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/pwd"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.449"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck,TextContrastCheck" />

            <Button
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:id="@+id/login"
                android:layout_width="300sp"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_input"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pwd"
                tools:ignore="ButtonStyle,UnusedAttribute,TouchTargetSizeCheck,TextContrastCheck" />

            <Button
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:id="@+id/google"
                android:layout_width="145sp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="220dp"
                android:background="@drawable/custom_input"
                android:drawableLeft="@drawable/icons8_google"
                android:text="@string/google"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/facebook"
                app:layout_constraintTop_toBottomOf="@+id/login"
                app:layout_constraintVertical_bias="0.04"
                tools:ignore="RtlHardcoded,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/pwd"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"
                android:autofillHints=""
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColorHint="#607D8B"
                app:layout_constraintBottom_toTopOf="@+id/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck" />

            <Button
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:id="@+id/facebook"
                android:layout_width="145sp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="200dp"
                android:background="@drawable/custom_input"
                android:drawableLeft="@drawable/icons8_facebook"
                android:text="@string/facebook"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/google"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="RtlHardcoded,TouchTargetSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>